# face-parser

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
src/face_parser/: bisenet.py
src/face_parser/bounding_boxes/: face_boxes_v2.py
src/face_parser/landmark_detection/: pipnet.py  pipnet_config.py
src/face_parser/modules/FaceBoxesV2/: detector.py  faceboxes_detector.py
src/face_parser/modules/FaceBoxesV2/utils/: build.py  nms_wrapper.py
src/face_parser/modules/FaceBoxesV2/utils/nms/: cpu_nms.c  cpu_nms.pyx
src/face_parser/modules/PIPNet/lib/: demo.py
src/visage/: visualize.py
src/visage/bounding_boxes/: face_boxes_v2.py
src/visage/evaluator/: csim_evaluator.py  keypoint_evaluator.py  lpips_evaluator.py  paired_face_image_evaluator.py  paired_image_evaluator.py  paired_video_evaluator.py  psnr_evaluator.py  ssim_evaluator.py
src/visage/landmark_detection/: pipnet.py
src/visage/matting/: background_matting_v2.py  modnet.py
src/visage/modules/FaceBoxesV2/: faceboxes_detector.py
src/visage/modules/FaceBoxesV2/utils/: build.py  faceboxes.py  nms_wrapper.py
src/visage/modules/FaceBoxesV2/utils/nms/: cpu_nms.c  cpu_nms.pyx  cpu_nms_py39.pyx
src/visage/modules/PIPNet/lib/: demo.py  functions.py  mobilenetv3.py  networks.py
src/visage/segmentation/: deeplabv3.py
test/: base.py  test_backgroundmattingv2.py  test_bisenet.py  test_deeplabv3.py  test_evaluation.py  test_face_boxes.py  test_modnet.py  test_pipnet.py
