[metadata]
name = face_parser
version = 0.1.2
author = Tobias Kirschstein
author_email = tobias.kirschstein@gmail.com
description =  Face Parsers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tobias-kirschstein/face-parser
project_urls =
    # Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    # License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    opencv-python
    cython
    requests
[options.packages.find]
where = src